[gd_scene load_steps=2 format=3 uid="uid://wfj6b11wkwx2"]

[ext_resource type="Script" path="res://scripts/ClientConnection.gd" id="1_0x1y2"]

[node name="ClientConnection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0x1y2")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
text = "Connect to Server"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputContainer" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 50.0

[node name="IPLabel" type="Label" parent="UI/InputContainer"]
layout_mode = 2
text = "Server IP:"
horizontal_alignment = 1

[node name="IPInput" type="LineEdit" parent="UI/InputContainer"]
layout_mode = 2
placeholder_text = "127.0.0.1"
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="UI/InputContainer"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 1

[node name="PortInput" type="LineEdit" parent="UI/InputContainer"]
layout_mode = 2
placeholder_text = "7000"
text = "7000"

[node name="ButtonContainer" type="HBoxContainer" parent="UI/InputContainer"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="UI/InputContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="BackButton" type="Button" parent="UI/InputContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
text = ""
horizontal_alignment = 1
vertical_alignment = 1
